--- a/scitos.hmx/scitos.hmx.core/src/main/resources/org/hmx/scitos/hmx/core/i18n/HmxMessage_de.xml
+++ b/scitos.hmx/scitos.hmx.core/src/main/resources/org/hmx/scitos/hmx/core/i18n/HmxMessage_de.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
-<!-- 
+<!--
    Copyright (C) 2015 HermeneutiX.org
-   
+
    This file is part of SciToS.
 
    SciToS is free software: you can redistribute it and/or modify
@@ -20,7 +20,6 @@
 -->
 <properties>
   <entry key="Analysis.CommentTopic">Geben Sie hier den Kommentar für das eingedrückte Element ein</entry>
-  <entry key="Analysis.Semantical">Wechsel auf Semantische</entry>
   <entry key="Analysis.Semantical.AlterRelationType">Ändere Beziehungsart</entry>
   <entry key="Analysis.Semantical.CreateRelation">Setze ausgewählte Elemente in Beziehung</entry>
   <entry key="Analysis.Semantical.RelationFolding.FoldAll">Alle Rollen ausblenden</entry>
@@ -29,7 +28,6 @@
   <entry key="Analysis.Semantical.RelationFolding.UnfoldLevel">Rollen dieser Ebene einblenden</entry>
   <entry key="Analysis.Semantical.RemoveRelation">Entferne Beziehung</entry>
   <entry key="Analysis.Semantical.RotateAssociateRoles">Wechsle Rollen aus</entry>
-  <entry key="Analysis.Syntactical">Wechsel auf Syntaktische</entry>
   <entry key="Analysis.Syntactical.ChangeItemFunction">Ändere Satzgliedfunktion</entry>
   <entry key="Analysis.Syntactical.ChangePropositionFunction">Ändere Einrückungsfunktion</entry>
   <entry key="Analysis.Syntactical.HighlightItem">Hebe Satzglied hervor</entry>
@@ -57,8 +55,15 @@ Wollen Sie wirklich fortfahren?</entry>
   <entry key="Client.MenuBar.Edit.OriginText.Remove">Ausgewählte Propositionen Entfernen</entry>
   <entry key="Client.MenuBar.Edit.OriginText.Remove.Confirm">Soll(en) die ausgewählte(n) Proposition(en) wirklich gelöscht werden?</entry>
   <entry key="Client.MenuBar.Edit.ProjectInfo">Projektinformationen</entry>
+  <entry key="Client.MenuBar.View.ToggleClauseItems">Satzglieder: Aus-/Einblenden</entry>
+  <entry key="Client.MenuBar.View.TogglePropositionIndentations">Propositionseinrückungen: Aus-/Einblenden</entry>
   <entry key="Client.MenuBar.View.TogglePropositionLabels">Propositionsbezeichner: Aus-/Einblenden</entry>
-  <entry key="Client.MenuBar.View.TogglePropositionTranslations">Propositionsübersetzungen: Aus-/Einblenden</entry>
+  <entry key="Client.MenuBar.View.ToggleRelations">Beziehungen: Aus-/Einblenden</entry>
+  <entry key="Client.MenuBar.View.ToggleSemanticTranslations">Semantische Übersetzungen: Aus-/Einblenden</entry>
+  <entry key="Client.MenuBar.View.ToggleSyntacticTranslations">Syntaktische Übersetzungen: Aus-/Einblenden</entry>
+  <entry key="Client.ToolBar.ViewPreset.AllDetails">Ansicht: Alles</entry>
+  <entry key="Client.ToolBar.ViewPreset.SemanticalAnalysis">Ansicht: Semantische Analyse</entry>
+  <entry key="Client.ToolBar.ViewPreset.SyntacticalAnalysis">Ansicht: Syntaktische Analyse</entry>
   <entry key="Error.CreateRelation.AtLeastTwoChecked">Es müssen mindestens zwei Elemente
 (über ihre CheckBoxen) ausgewählt sein.</entry>
   <entry key="Error.CreateRelation.MoreThenTwoChecked">Die gewählte Beziehung kann
@@ -198,7 +203,6 @@ Er wird in the Syntaktischen Analyse im entsprechenden Auswahlmenü angezeigt.</
   <entry key="Preferences.View.IndentationWidth">Breite der Einrückungen</entry>
   <entry key="Preferences.View.Propositions">Auf Propositionen in Analyse-Ansicht</entry>
   <entry key="Preferences.View.Propositions.ShowLabels">Kurzbezeichnerfelder einblenden</entry>
-  <entry key="Preferences.View.Propositions.ShowTranslations">Übersetzungsfelder einblenden</entry>
   <entry key="Preferences.View.TextInput">Beim Start der Texteingabe</entry>
   <entry key="Preferences.View.TextInput.ShowSettings">Einstellungen einblenden</entry>
   <entry key="ProjectInfo.Author">Autor</entry>
