feat: bulk import of AIS interviews

--- a/scitos.ais/scitos.ais.core/src/main/resources/org/hmx/scitos/ais/core/i18n/AisMessage.xml
+++ b/scitos.ais/scitos.ais.core/src/main/resources/org/hmx/scitos/ais/core/i18n/AisMessage.xml
@@ -72,5 +72,15 @@ Category assignments without a selected replacement are being discarded.</entry>
 	<entry key="Ais.Project.ChangeDetailCategories.ReplacingCategory">Replaced With New Category</entry>
 	<entry key="Ais.Project.Export.Html">HTML File</entry>
 	<entry key="Ais.Project.Export.Ods">Spreadsheet (only Results)</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods">Import Interviews (from Spreadsheet)</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.InvalidSpreadsheet">An import spreadsheet should have at least one sheet and at least two columns and rows on that sheet.
+
+One column is expected to contain the Participant IDs and another column should contain the associated interview texts.</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.Preview.Participant">Participant ID</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.Preview.Select">Import?</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.Preview.Text">Interview Text (Preview)</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.SelectInterviewTextColumn">Column containing Interview Texts:</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.SelectParticipantColumn">Column containing Participant IDs:</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.SelectSheet">Sheet to import from:</entry>
 	<entry key="Ais.Project.Unsaved">AIS Project - unsaved</entry>
 </properties>
