--- a/scitos.ais/scitos.ais.core/src/main/resources/org/hmx/scitos/ais/core/i18n/AisMessage_de.xml
+++ b/scitos.ais/scitos.ais.core/src/main/resources/org/hmx/scitos/ais/core/i18n/AisMessage_de.xml
@@ -75,5 +75,15 @@ Zugeordnete Kategorien ohne Entsprechung im neuen Modell werden verworfen!</entr
 	<entry key="Ais.Project.ChangeDetailCategories.ReplacingCategory">Ersetzt durch neue Kategorie</entry>
 	<entry key="Ais.Project.Export.Html">HTML-Datei</entry>
 	<entry key="Ais.Project.Export.Ods">ODS-Datei (Ergebnistabellen)</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods">Importiere Interviews (aus ODS-Spreadsheet)</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.InvalidSpreadsheet">Ein Spreadsheet kann nur für den Import verwendet werden, wenn es mindesten ein Tabellenblatt enthält, mit mindestens zwei Spalten und zwei Zeilen.
+
+Eine Spalte sollte den Bezeichner der Studienteilnehmer enthalten und die andere Spalte die Interview-Mitschrift.</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.Preview.Participant">Teilnehmer</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.Preview.Select">Importieren?</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.Preview.Text">Interview Text (Vorschau)</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.SelectInterviewTextColumn">Spalte mit Interview-Text:</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.SelectParticipantColumn">Spalte mit Teilnehmerbezeichnung:</entry>
+	<entry key="Ais.Project.Import.Interviews.Ods.SelectSheet">Tabellenblatt:</entry>
 	<entry key="Ais.Project.Unsaved">AIS Projekt - ungespeichert</entry>
 </properties>
